Add Dean's List and Recommendation Letter

--- a/index.html
+++ b/index.html
@@ -231,6 +231,23 @@ title: Bernard Teo Zhi Yi
 <hr/>
 
 <div>
+<p><span class="keyname">NUS Academic Awards:</span></p>
+
+<p>The Dean's List is awarded to students in the top 5% of their cohort each semester.  Students are only eligible for the Dean's List after their freshmen year, and they must take at least two modules from their host faculty in that semester.  As a student enrolled in a double degree programme, I am eligible for either faculty's Dean's List only when I take at least two modules offered by that faculty in the same semester.</p>
+
+<p>Module coordinators may occasionally award recommendation letters to students for outstanding performance in their modules.</p>
+
+<ul>
+<li>AY 19/20 Sem 1 Dean's List for NUS School of Computing</li>
+<li>AY 19/20 Sem 1 Dean's List for NUS Faculty of Science</li>
+<li>Recommendation Letter for CS4261</li>
+<li>AY 18/19 Sem 2 Dean's List for NUS School of Computing</li>
+<li>AY 18/19 Sem 1 Dean's List for NUS School of Computing</li>
+</ul>
+</div>
+<hr/>
+
+<div>
 <p><span class="keyname">NUS Modules Taken:</span></p>
 <p>Here is an exhaustive list of modules that I have taken in NUS.  Where available, you may use my cheatsheets for your studies (but I cannot guarantee the correctness or completeness of any information on them).  If you want the LaTeX source, you have to ask for it.</p>
 
@@ -326,6 +343,6 @@ title: Bernard Teo Zhi Yi
 
 <div>
 <p><span class="keyname">Personal Non-Software Projects:</span></p>
-(coming soon...)
+<p>(coming soon...)</p>
 </div>
 <hr/>
