--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@ title: Bernard Teo Zhi Yi
 <li>
 <div class="header">Simon Marais Mathematics Competition (SMMC)</div>
 <ul>
-<li><a href="https://www.simonmarais.org/20191.html">Top Quartile in 2019 (scored 34 out of 56 points)</a></li>
+<li><a href="https://www.simonmarais.org/20202.html">Top Decile in 2020 (scored 32 out of 56 points)</a></li>
+<li><a href="https://www.simonmarais.org/20192.html">Top Quartile in 2019 (scored 34 out of 56 points)</a></li>
 <li><a href="https://www.simonmarais.org/20183.html">Top Quartile in 2018 (scored 31 out of 56 points)</a></li>
 </ul>
 </li>
