Certificate of Distinction for Algo & Theory Focus Area

--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@ title: Bernard Teo Zhi Yi
 <p>Module coordinators may occasionally award recommendation letters to students for outstanding performance in their modules.</p>
 
 <ul>
+<li>Certificate of Distinction in the Algorithms &amp; Theory Focus Area of the Bachelor of Computing in Computer Science</li>
 <li>AY 19/20 Sem 1 Dean's List for NUS School of Computing</li>
 <li>AY 19/20 Sem 1 Dean's List for NUS Faculty of Science</li>
 <li>Recommendation Letter for CS4261</li>
