--- a/index.html
+++ b/index.html
@@ -197,14 +197,15 @@ title: Bernard Teo Zhi Yi
 <li>
 <div class="header">CS2106 Introduction to Operating Systems</div>
 <div class="date">AY 20/21 Sem 1 (August &ndash; November 2020)</div>
-<div class="content">This is the current semester.</div>
+<div class="link"><a href="teaching/teacher_report_2021_sem1_CS2106_lab.pdf">Teacher Report</a> (overall score: 4.3/5)</div>
+<div class="content">Conducted lab sessions for 3 classes (51 students in total); designed, implemented, and graded one of the assignments.  Sessions were conducted online due to the pandemic.</div>
 </li>
 
 <li>
 <div class="header">CS2106 Introduction to Operating Systems</div>
 <div class="date">AY 19/20 Sem 1 (August &ndash; November 2019)</div>
 <div class="link"><a href="teaching/teacher_report_1920_sem1_CS2106_lab.pdf">Teacher Report</a> (overall score: 4.6/5)</div>
-<div class="content">Conduct lab sessions for 3 classes (61 students in total); designed, implemented, and graded one of the assignments.</div>
+<div class="content">Conducted lab sessions for 3 classes (61 students in total); designed, implemented, and graded one of the assignments.</div>
 </li>
 
 <li>
@@ -213,7 +214,7 @@ title: Bernard Teo Zhi Yi
 <div class="link"><a href="teaching/teacher_report_1819_sem1_CS2030_lab.pdf">Teacher Report (lab)</a> (overall score: 4.8/5)</div>
 <div class="link"><a href="teaching/teacher_report_1819_sem1_CS2030_tutorial.pdf">Teacher Report (tutorial)</a> (overall score: 4.6/5)</div>
 <div class="link"><a href="teaching/text_analytics_report_1819_sem1.pdf">Aggregated Text Analytics Report</a></div>
-<div class="content">Conduct lab sessions for 1 class (14 students) and tutorial sessions for 1 class (19 students); designed and implemented one of the assignments.</div>
+<div class="content">Conducted lab sessions for 1 class (14 students) and tutorial sessions for 1 class (19 students); designed and implemented one of the assignments.</div>
 </li>
 
 <li>
@@ -221,7 +222,7 @@ title: Bernard Teo Zhi Yi
 <div class="date">AY 17/18 Sem 2 (January &ndash; April 2018)</div>
 <div class="link"><a href="teaching/teacher_report_1718_sem2_CS2030_lab.pdf">Teacher Report</a> (overall score: 4.7/5)</div>
 <div class="link"><a href="teaching/text_analytics_report_1718_sem2.pdf">Aggregated Text Analytics Report</a></div>
-<div class="content">Conduct lab sessions for 1 class (36 students).  Although a lab class in name, this was more like a tutorial class with weekly presentations and discussions that reinforced the content covered in the lectures.  I worked with <a href="https://sijie123.com/">Lin Si Jie</a> and Lim Heng Guang to teach this class.</div>
+<div class="content">Conducted lab sessions for 1 class (36 students).  Although a lab class in name, this was more like a tutorial class with weekly presentations and discussions that reinforced the content covered in the lectures.  I worked with <a href="https://sijie123.com/">Lin Si Jie</a> and Lim Heng Guang to teach this class.</div>
 </li>
 
 </ul>
