Add AY2021 Sem 2 teaching

--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@ title: Bernard Teo Zhi Yi
 <ul class="detailedlist">
 
 <li>
+<div class="header">CS3230 Design and Analysis of Algorithms</div>
+<div class="date">AY 20/21 Sem 2 (January &ndash; Apr 2021)</div>
+<div class="content">This is the current semester.</div>
+</li>
+
+<li>
 <div class="header">CS2106 Introduction to Operating Systems</div>
 <div class="date">AY 20/21 Sem 1 (August &ndash; November 2020)</div>
 <div class="link"><a href="teaching/teacher_report_2021_sem1_CS2106_lab.pdf">Teacher Report</a> (overall score: 4.3/5)</div>
