--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@ title: Bernard Teo Zhi Yi
 <li>
 <div class="header">Simon Marais Mathematics Competition (SMMC)</div>
 <ul>
-<li><a href="https://www.simonmarais.org/20202.html">Top Decile in 2020 (scored 32 out of 56 points)</a></li>
-<li><a href="https://www.simonmarais.org/20192.html">Top Quartile in 2019 (scored 34 out of 56 points)</a></li>
-<li><a href="https://www.simonmarais.org/20183.html">Top Quartile in 2018 (scored 31 out of 56 points)</a></li>
+<li><a href="https://www.simonmarais.org/20202.html">Top Decile in 2020</a> (scored 32 out of 56 points)</li>
+<li><a href="https://www.simonmarais.org/20192.html">Top Quartile in 2019</a> (scored 34 out of 56 points)</li>
+<li><a href="https://www.simonmarais.org/20183.html">Top Quartile in 2018</a> (scored 31 out of 56 points)</li>
 </ul>
 </li>
 
@@ -246,7 +246,7 @@ title: Bernard Teo Zhi Yi
 <p>Module coordinators may occasionally award recommendation letters to students for outstanding performance in their modules.</p>
 
 <ul>
-<li>Certificate of Distinction in the Algorithms &amp; Theory Focus Area of the Bachelor of Computing in Computer Science</li>
+<li>Certificate of Distinction in the Algorithms &amp; Theory Focus Area of the Bachelor of Computing in Computer Science | <a href="https://credentials.nus.edu.sg/0e7feda8-b6c6-4b7b-ba15-24941d25d74d">Digital certificate</a></li>
 <li>AY 19/20 Sem 1 Dean's List for NUS School of Computing</li>
 <li>AY 19/20 Sem 1 Dean's List for NUS Faculty of Science</li>
 <li>Recommendation Letter for CS4261</li>
