Add reviews and cheatsheets for AY2021S1

--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@ title: Bernard Teo Zhi Yi
 <p class="modulegroup">AY 20/21 Sem 1</p>
 <ul>
 <li>CM1131 Physical Chemistry 1</li>
-<li>CS4212 Compiler Design</li>
-<li>CS4232 Theory of Computation</li>
-<li>MA4270 Data Modelling and Computation</li>
+<li>CS4212 Compiler Design | <a href="nus/CS4212.txt">Review</a> | <a href="https://github.com/btzy/CS4212-compiler">Github repository</a></li>
+<li>CS4232 Theory of Computation | <a href="nus/CS4232.txt">Review</a> | <a href="nus/CS4232 Reference.pdf">Cheatsheet</a></li>
+<li>MA4270 Data Modelling and Computation | <a href="nus/MA4270.txt">Review</a> | <a href="nus/MA4270 Reference.pdf">Cheatsheet</a></li>
 <li>XFC4101 Integrated Honours Thesis (year-long module)</li>
 </ul>
 
