--- a/index.html
+++ b/index.html
@@ -270,47 +270,47 @@ title: Bernard Teo Zhi Yi
 <p class="modulegroup">AY 17/18 Sem 1</p>
 <ul>
 <li>CFG1010 Roots and Wings - Personal and Interpersonal Effectiveness 1.0</li>
-<li>CS1231 Discrete Structures | <a href="nus/CS1231.txt">Review</a> | <a href="nus/CS1231 Reference.pdf">Cheatsheet</a></li>
-<li>CS2030 Programming Methodology II | <a href="nus/CS2030.txt">Review</a> | <a href="nus/CS2030 Reference.docx">Cheatsheet</a></li>
-<li>GES1019 Managing Singapore's Built Environment | <a href="nus/GES1019.txt">Review</a></li>
-<li>MA1521 Calculus for Computing | <a href="nus/MA1521.txt">Review</a> | <a href="nus/MA1521 Reference.pdf">Cheatsheet</a></li>
-<li>MA2101 Linear Algebra II | <a href="nus/MA2101.txt">Review</a> | <a href="nus/MA2101 Reference.pdf">Cheatsheet</a></li>
+<li>CS1231 Discrete Structures | <a href="nus/CS1231">Review</a> | <a href="nus/CS1231 Reference.pdf">Cheatsheet</a></li>
+<li>CS2030 Programming Methodology II | <a href="nus/CS2030">Review</a> | <a href="nus/CS2030 Reference.docx">Cheatsheet</a></li>
+<li>GES1019 Managing Singapore's Built Environment | <a href="nus/GES1019">Review</a></li>
+<li>MA1521 Calculus for Computing | <a href="nus/MA1521">Review</a> | <a href="nus/MA1521 Reference.pdf">Cheatsheet</a></li>
+<li>MA2101 Linear Algebra II | <a href="nus/MA2101">Review</a> | <a href="nus/MA2101 Reference.pdf">Cheatsheet</a></li>
 </ul>
 
 <p class="modulegroup">AY 17/18 Sem 2</p>
 <ul>
-<li>CS2100 Computer Organisation | <a href="nus/CS2100.txt">Review</a> | <a href="nus/CS2100 Reference.pdf">Cheatsheet</a></li>
-<li>CS2105 Introduction to Computer Networks | <a href="nus/CS2105.txt">Review</a> | <a href="nus/CS2105 Reference.pdf">Cheatsheet</a></li>
+<li>CS2100 Computer Organisation | <a href="nus/CS2100">Review</a> | <a href="nus/CS2100 Reference.pdf">Cheatsheet</a></li>
+<li>CS2105 Introduction to Computer Networks | <a href="nus/CS2105">Review</a> | <a href="nus/CS2105 Reference.pdf">Cheatsheet</a></li>
 <li>CS3233 Competitive Programming</li>
 <li>CS3233R Competitive Programming (R)</li>
-<li>ES2660 Communicating in the Information Age | <a href="nus/ES2660.txt">Review</a></li>
-<li>GER1000 Quantitative Reasoning | <a href="nus/GER1000.txt">Review</a></li>
-<li>IS1103 IS Innovations in Organisations and Society | <a href="nus/IS1103.txt">Review</a></li>
-<li>MA2104 Multivariable Calculus | <a href="nus/MA2104.txt">Review</a> | <a href="nus/MA2104 Reference.pdf">Cheatsheet</a></li>
+<li>ES2660 Communicating in the Information Age | <a href="nus/ES2660">Review</a></li>
+<li>GER1000 Quantitative Reasoning | <a href="nus/GER1000">Review</a></li>
+<li>IS1103 IS Innovations in Organisations and Society | <a href="nus/IS1103">Review</a></li>
+<li>MA2104 Multivariable Calculus | <a href="nus/MA2104">Review</a> | <a href="nus/MA2104 Reference.pdf">Cheatsheet</a></li>
 </ul>
 
 <p class="modulegroup">AY 17/18 Summer Break</p>
 <ul>
-<li>CP2106 Independent Software Development Project (Orbital) | <a href="nus/CP2106.txt">Review</a> | <a href="https://github.com/btzy/circuit-sandbox">GitHub repository</a> | <a href="https://btzy.github.io/circuit-sandbox-poster.pdf">Poster</a> | <a href="https://www.youtube.com/watch?v=0RVUXjSf994">Video 1</a> | <a href="https://www.youtube.com/watch?v=lkfBC4iivmc">Video 2</a> | <a href="https://www.youtube.com/watch?v=DmSCg-yd0Uo">Video 3</a></li>
+<li>CP2106 Independent Software Development Project (Orbital) | <a href="nus/CP2106">Review</a> | <a href="https://github.com/btzy/circuit-sandbox">GitHub repository</a> | <a href="https://btzy.github.io/circuit-sandbox-poster.pdf">Poster</a> | <a href="https://www.youtube.com/watch?v=0RVUXjSf994">Video 1</a> | <a href="https://www.youtube.com/watch?v=lkfBC4iivmc">Video 2</a> | <a href="https://www.youtube.com/watch?v=DmSCg-yd0Uo">Video 3</a></li>
 </ul>
 
 <p class="modulegroup">AY 18/19 Sem 1</p>
 <ul>
-<li>CS2101 Effective Communication for Computing Professionals | <a href="nus/CS2101.txt">Review</a></li>
-<li>CS2103T Software Engineering | <a href="nus/CS2103T.txt">Review</a> | <a href="https://github.com/CS2103-AY1819S1-W17-4/main">GitHub repository</a></li>
-<li>CS2106 Introduction to Operating Systems | <a href="nus/CS2106.txt">Review</a> | <a href="nus/CS2106 Reference.pdf">Cheatsheet</a></li>
-<li>CS3210 Parallel Computing | <a href="nus/CS3210.txt">Review</a> | <a href="nus/CS3210 Reference.pdf">Cheatsheet</a></li>
-<li>CS3230 Design and Analysis of Algorithms | <a href="nus/CS3230.txt">Review</a></li>
-<li>GEQ1000 Asking Questions | <a href="nus/GEQ1000.txt">Review</a></li>
-<li>MA3218 Applied Algebra | <a href="nus/MA3218.txt">Review</a> | <a href="nus/MA3218 Reference.pdf">Cheatsheet</a></li>
+<li>CS2101 Effective Communication for Computing Professionals | <a href="nus/CS2101">Review</a></li>
+<li>CS2103T Software Engineering | <a href="nus/CS2103T">Review</a> | <a href="https://github.com/CS2103-AY1819S1-W17-4/main">GitHub repository</a></li>
+<li>CS2106 Introduction to Operating Systems | <a href="nus/CS2106">Review</a> | <a href="nus/CS2106 Reference.pdf">Cheatsheet</a></li>
+<li>CS3210 Parallel Computing | <a href="nus/CS3210">Review</a> | <a href="nus/CS3210 Reference.pdf">Cheatsheet</a></li>
+<li>CS3230 Design and Analysis of Algorithms | <a href="nus/CS3230">Review</a></li>
+<li>GEQ1000 Asking Questions | <a href="nus/GEQ1000">Review</a></li>
+<li>MA3218 Applied Algebra | <a href="nus/MA3218">Review</a> | <a href="nus/MA3218 Reference.pdf">Cheatsheet</a></li>
 </ul>
 
 <p class="modulegroup">AY 18/19 Sem 2</p>
 <ul>
 <li>CP3108B Independent Work (self-directed training for ICPC World Finals)</li>
-<li>CS3203 Software Engineering Project | <a href="nus/CS3203.txt">Review</a></li>
-<li>CS4231 Parallel and Distributed Algorithms | <a href="nus/CS4231.txt">Review</a> | <a href="nus/CS4231 Reference.pdf">Cheatsheet</a></li>
-<li>MA2108S Mathematical Analysis I (S) | <a href="nus/MA2108S.txt">Review</a></li>
+<li>CS3203 Software Engineering Project | <a href="nus/CS3203">Review</a></li>
+<li>CS4231 Parallel and Distributed Algorithms | <a href="nus/CS4231">Review</a> | <a href="nus/CS4231 Reference.pdf">Cheatsheet</a></li>
+<li>MA2108S Mathematical Analysis I (S) | <a href="nus/MA2108S">Review</a></li>
 </ul>
 
 <p class="modulegroup">AY 18/19 Summer Break</p>
@@ -320,20 +320,20 @@ title: Bernard Teo Zhi Yi
 
 <p class="modulegroup">AY 19/20 Sem 1</p>
 <ul>
-<li>CS2104 Programming Language Concepts | <a href="nus/CS2104.txt">Review</a></li>
-<li>CS4234 Optimisation Algorithms | <a href="nus/CS4234.txt">Review</a> | <a href="nus/CS4234 Reference.pdf">Cheatsheet</a></li>
-<li>CS4261 Algorithmic Mechanism Design | <a href="nus/CS4261.txt">Review</a> | <a href="nus/CS4261 Reference.pdf">Cheatsheet</a></li>
-<li>MA2213 Numerical Analysis I | <a href="nus/MA2213.txt">Review</a> | <a href="nus/MA2213 Reference.pdf">Cheatsheet</a></li>
-<li>MA2214 Combinatorics and Graphs I | <a href="nus/MA2214.txt">Review</a></li>
+<li>CS2104 Programming Language Concepts | <a href="nus/CS2104">Review</a></li>
+<li>CS4234 Optimisation Algorithms | <a href="nus/CS4234">Review</a> | <a href="nus/CS4234 Reference.pdf">Cheatsheet</a></li>
+<li>CS4261 Algorithmic Mechanism Design | <a href="nus/CS4261">Review</a> | <a href="nus/CS4261 Reference.pdf">Cheatsheet</a></li>
+<li>MA2213 Numerical Analysis I | <a href="nus/MA2213">Review</a> | <a href="nus/MA2213 Reference.pdf">Cheatsheet</a></li>
+<li>MA2214 Combinatorics and Graphs I | <a href="nus/MA2214">Review</a></li>
 <li>MA3110S Mathematical Analysis II (S) | <a href="nus/MA3110S Reference.pdf">Cheatsheet</a></li>
-<li>ST2131 Probability | <a href="nus/ST2131.txt">Review</a></li>
+<li>ST2131 Probability | <a href="nus/ST2131">Review</a></li>
 </ul>
 
 <p class="modulegroup">AY 19/20 Sem 2</p>
 <ul>
-<li>CS4215 Programming Language Implementation | <a href="nus/CS4215.txt">Review</a> | <a href="https://github.com/source-academy/sourceror">GitHub repository</a></li>
+<li>CS4215 Programming Language Implementation | <a href="nus/CS4215">Review</a> | <a href="https://github.com/source-academy/sourceror">GitHub repository</a></li>
 <li>MA3111 Complex Analysis I | <a href="nus/MA3111 Reference.pdf">Cheatsheet</a></li>
-<li>MA3233 Combinatorics and Graphs II | <a href="nus/MA3233.txt">Review</a> | <a href="nus/MA3233 Reference.pdf">Cheatsheet</a></li>
+<li>MA3233 Combinatorics and Graphs II | <a href="nus/MA3233">Review</a> | <a href="nus/MA3233 Reference.pdf">Cheatsheet</a></li>
 <li>MA4211 Functional Analysis | <a href="nus/MA4211 Reference.pdf">Cheatsheet</a></li>
 <li>GET1001 Seeing the World Through Maps</li>
 </ul>
@@ -341,9 +341,9 @@ title: Bernard Teo Zhi Yi
 <p class="modulegroup">AY 20/21 Sem 1</p>
 <ul>
 <li>CM1131 Physical Chemistry 1</li>
-<li>CS4212 Compiler Design | <a href="nus/CS4212.txt">Review</a> | <a href="https://github.com/btzy/CS4212-compiler">Github repository</a></li>
-<li>CS4232 Theory of Computation | <a href="nus/CS4232.txt">Review</a> | <a href="nus/CS4232 Reference.pdf">Cheatsheet</a></li>
-<li>MA4270 Data Modelling and Computation | <a href="nus/MA4270.txt">Review</a> | <a href="nus/MA4270 Reference.pdf">Cheatsheet</a></li>
+<li>CS4212 Compiler Design | <a href="nus/CS4212">Review</a> | <a href="https://github.com/btzy/CS4212-compiler">Github repository</a></li>
+<li>CS4232 Theory of Computation | <a href="nus/CS4232">Review</a> | <a href="nus/CS4232 Reference.pdf">Cheatsheet</a></li>
+<li>MA4270 Data Modelling and Computation | <a href="nus/MA4270">Review</a> | <a href="nus/MA4270 Reference.pdf">Cheatsheet</a></li>
 <li>XFC4101 Integrated Honours Thesis (year-long module)</li>
 </ul>
 
