Add honor list of student tutors

--- a/index.html
+++ b/index.html
@@ -188,6 +188,18 @@ layout: default
 <hr/>
 
 <div>
+<p><span class="keyname">NUS Teaching Awards:</span></p>
+
+<p>The Honor List of Student Tutors is awarded by NUS School of Computing each academic year to recognise excellence in teaching among its student tutors.  The exact criteria for this award is not known, but it is believed to be derived from the feedback collected from students at the end of each semester.</p>
+
+<ul>
+<li>AY 19/20 Honor List of Student Tutors</li>
+<li>AY 18/19 Honor List of Student Tutors</li>
+</ul>
+</div>
+<hr/>
+
+<div>
 <p><span class="keyname">NUS Modules Taught:</span></p>
 <p>NUS School of Computing provides opportunities for undergraduate students to be teaching assistants, usually by conducting tutorial and lab classes.  Undergraduate teaching assistants are chosen by the module coordinator, and usually have done well when they took the module as students.</p>
 
