Fix sentence structure for honor list of student tutors

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ layout: default
 <div>
 <p><span class="keyname">NUS Teaching Awards:</span></p>
 
-<p>The Honor List of Student Tutors is awarded by NUS School of Computing each academic year to recognise excellence in teaching among its student tutors.  The exact criteria for this award is not known, but it is believed to be derived from the feedback collected from students at the end of each semester.</p>
+<p>The Honor List of Student Tutors is awarded by NUS School of Computing each academic year to recognise excellence in teaching among its student tutors.  The exact criteria for this award is not known, but it is believed to be derived from the student feedback collected at the end of each semester.</p>
 
 <ul>
 <li>AY 19/20 Honor List of Student Tutors</li>
