--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@ layout: default
 <hr/>
 
 <div>
+<p><span class="keyname">Blog Posts:</span></p>
+<ul>
+{% for post in site.posts %}
+<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+{% endfor %}
+</ul>
+</div>
+<hr/>
+
+<div>
 <p><span class="keyname">Work Experience:</span></p>
 <ul class="detailedlist">
 
