Add AY20/21 Sem 2 modules

--- a/index.html
+++ b/index.html
@@ -368,6 +368,17 @@ layout: default
 <li>XFC4101 Integrated Honours Thesis (year-long module)</li>
 </ul>
 
+<p class="modulegroup">AY 20/21 Sem 2</p>
+<ul>
+<li>CS5330 Randomized Algorithms</li>
+<li>DMC1401CS Design Your Own Module (following <a href="https://pdos.csail.mit.edu/6.824/index.html">MIT 6.824 Distributed Systems</a>)</li>
+<li>MA4207 Mathematical Logic</li>
+<li>MA4261 Coding and Cryptography</li>
+<li>PC1144 Introduction to Modern Physics</li>
+<li>ST2132 Mathematical Statistics</li>
+<li>XFC4101 Integrated Honours Thesis (year-long module)</li>
+</ul>
+
 </div>
 <hr/>
 
