Say that Sourceror and NFDe are still presently maintained

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ layout: default
 <div class="header">Sourceror</div>
 <div class="date">January 2020 &ndash; Present</div>
 <div class="link"><a href="https://source-academy.github.io/playground">Try it here!</a> (select Source &sect;1 WebAssembly from the drop-down menu) | <a href="https://github.com/source-academy/sourceror">GitHub repository</a> | <img class="typeicon" src="font-awesome/web.svg" /> <img class="typeicon" src="font-awesome/node-js.svg" /></div>
-<div class="content">Sourceror is an optimising compiler from Source to WebAssembly.  Source is a simplified variant of JavaScript designed for the introductory programming module at NUS.  Sourceror implements many features expected of a fully-featured compiler, including modules (multi-file compilation with import/export), a foreign function interface with JavaScript, a garbage collector, and optimisations for variable capture, type propagation, and function call devirtualisation.  The compiler itself is compiled to WebAssembly so that Source programs can be compiled and run from within the browser.  Sourceror was my project for the CS4215 module at NUS.</div>
+<div class="content">Sourceror is an optimising compiler from Source to WebAssembly.  Source is a simplified variant of JavaScript designed for the introductory programming module at NUS.  Sourceror implements many features expected of a fully-featured compiler, including modules (multi-file compilation with import/export), a foreign function interface with JavaScript, a garbage collector, and optimisations for variable capture, type propagation, and function call devirtualisation.  The compiler itself is compiled to WebAssembly so that Source programs can be compiled and run from within the browser.  Sourceror was my project for the CS4215 module at NUS.  Sourceror is now maintained by the Source Academy team at NUS which I am part of, and I continue to review code that goes into the project.</div>
 <div class="content"><span class="semibold">Technologies:</span> Rust, WebAssembly, TypeScript</div>
 </li>
 
@@ -69,7 +69,7 @@ layout: default
 <div class="header">Native File Dialog Extended</div>
 <div class="date">August 2018 &ndash; Present</div>
 <div class="link"><a href="https://github.com/btzy/nativefiledialog-extended">GitHub repository</a> | <img class="typeicon" src="font-awesome/windows.svg" /> <img class="typeicon" src="font-awesome/apple.svg" /> <img class="typeicon" src="font-awesome/linux.svg" /></div>
-<div class="content">Native File Dialog Extended is an abstraction over the platform-specific file and directory pickers on Windows, Mac, and Linux.  It is based on <a href="https://github.com/mlabbe/nativefiledialog">Native File Dialog</a>, and adds additional features such as friendly filter names and a C++ wrapper.  It was originally designed for use with Circuit Sandbox.</div>
+<div class="content">Native File Dialog Extended (NFDe) is an abstraction over the platform-specific file and directory pickers on Windows, Mac, and Linux.  It is based on <a href="https://github.com/mlabbe/nativefiledialog">Native File Dialog</a>, and adds additional features such as friendly filter names and a C++ wrapper.  NFDe was originally designed for use with Circuit Sandbox, but I still maintain it and it is now depended on by other third-party projects.</div>
 <div class="content"><span class="semibold">Technologies:</span> C, C++, Objective-C</div>
 </li>
 
