Add DYOM guidance

--- a/index.html
+++ b/index.html
@@ -380,6 +380,8 @@ layout: default
 <li>XFC4101 Integrated Honours Thesis (year-long module)</li>
 </ul>
 
+<span class="keyname">About DMC1401CS Design Your Own Module (DYOM):</span>  Students may propose their own module (called a DYOM), which counts as a 4MC CS/CU unrestricted elective.  There is generally no restriction on the kind of topic allowed, as long as they can find a supervisor (an NUS professor) and a sufficient number of interested students.  At the point of writing, a minimum of ten students is required (though this may be negotiable), and each student may take up to two DYOMs in total.  For information about starting and running a DYOM in general, see <a href="https://www.nus.edu.sg/registrar/academic-information-policies/undergraduate-students/design-your-own-module">this page</a>.  For SoC-specific guidance, see <a href="https://github.com/nusdistsys/NUS_DYOM">this page</a> (maintained by students).  Some people in <a href="https://www.nushackers.org/">NUS Hackers</a> might also be able to provide guidance.
+
 </div>
 <hr/>
 
