Add programming languages focus area certificate

--- a/index.html
+++ b/index.html
@@ -267,7 +267,10 @@ layout: default
 
 <p>Module coordinators may occasionally award recommendation letters to students for outstanding performance in their modules.</p>
 
+<p><a href="https://www.comp.nus.edu.sg/programmes/ug/honour/merit/">BComp (CS) Focus Area Certificates</a> are awarded to students with outstanding performance in the modules satisfying that focus area.</p>
+
 <ul>
+<li>Certificate of Distinction in the Programming Languages Focus Area of the Bachelor of Computing in Computer Science | <a href="https://credentials.nus.edu.sg/106ae5cf-653b-4a66-abc3-58eab4f406d5">Digital certificate</a></li>
 <li>Certificate of Distinction in the Algorithms &amp; Theory Focus Area of the Bachelor of Computing in Computer Science | <a href="https://credentials.nus.edu.sg/0e7feda8-b6c6-4b7b-ba15-24941d25d74d">Digital certificate</a></li>
 <li>AY 19/20 Sem 1 Dean's List for NUS School of Computing</li>
 <li>AY 19/20 Sem 1 Dean's List for NUS Faculty of Science</li>
