Add reviews, cheatsheets, TA feedback for AY2021 sem 2

--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@ layout: default
 <li>
 <div class="header">CS3230 Design and Analysis of Algorithms</div>
 <div class="date">AY 20/21 Sem 2 (January &ndash; April 2021)</div>
-<div class="content">This is the current semester.</div>
+<div class="link"><a href="teaching/teacher_report_2021_sem2_CS3230_tutorial.pdf">Teacher Report</a> (overall score: 3.9/5)</div>
+<div class="content">Conducted tutorial sessions for 2 classes (34 students in total); graded one written assignment.</div>
 </li>
 
 <li>
@@ -369,18 +370,18 @@ layout: default
 <li>CS4212 Compiler Design | <a href="nus/CS4212.html">Review</a> | <a href="https://github.com/btzy/CS4212-compiler">Github repository</a></li>
 <li>CS4232 Theory of Computation | <a href="nus/CS4232.html">Review</a> | <a href="nus/CS4232 Reference.pdf">Cheatsheet</a></li>
 <li>MA4270 Data Modelling and Computation | <a href="nus/MA4270.html">Review</a> | <a href="nus/MA4270 Reference.pdf">Cheatsheet</a></li>
-<li>XFC4101 Integrated Honours Thesis (year-long module)</li>
+<li>XFC4101 Integrated Honours Thesis (year-long module) | <a href="nus/XFC4101.html">Review</a></li>
 </ul>
 
 <p class="modulegroup">AY 20/21 Sem 2</p>
 <ul>
-<li>CS5330 Randomized Algorithms</li>
+<li>CS5330 Randomized Algorithms | <a href="nus/CS5330.html">Review</a> | <a href="nus/CS5330 Reference.pdf">Cheatsheet</a></li>
 <li>DMC1401CS Design Your Own Module (following <a href="https://pdos.csail.mit.edu/6.824/index.html">MIT 6.824 Distributed Systems</a>)</li>
-<li>MA4207 Mathematical Logic</li>
-<li>MA4261 Coding and Cryptography</li>
+<li>MA4207 Mathematical Logic | <a href="nus/MA4207.html">Review</a></li>
+<li>MA4261 Coding and Cryptography | <a href="nus/MA4261.html">Review</a> | <a href="nus/MA4261 Reference.pdf">Cheatsheet</a></li>
 <li>PC1144 Introduction to Modern Physics</li>
-<li>ST2132 Mathematical Statistics</li>
-<li>XFC4101 Integrated Honours Thesis (year-long module)</li>
+<li>ST2132 Mathematical Statistics | <a href="nus/ST2132.html">Review</a> | <a href="nus/ST2132 Reference.pdf">Cheatsheet</a></li>
+<li>XFC4101 Integrated Honours Thesis (year-long module) | <a href="nus/XFC4101.html">Review</a></li>
 </ul>
 
 <span class="keyname">About DMC1401CS Design Your Own Module (DYOM):</span>  Students may propose their own module (called a DYOM), which counts as a 4MC CS/CU unrestricted elective.  There is generally no restriction on the kind of topic allowed, as long as they can find a supervisor (an NUS professor) and a sufficient number of interested students.  At the point of writing, a minimum of ten students is required (though this may be negotiable), and each student may take up to two DYOMs in total.  For information about starting and running a DYOM in general, see <a href="https://www.nus.edu.sg/registrar/academic-information-policies/undergraduate-students/design-your-own-module">this page</a>.  For SoC-specific guidance, see <a href="https://github.com/nusdistsys/NUS_DYOM">this page</a> (maintained by students).  Some people in <a href="https://www.nushackers.org/">NUS Hackers</a> might also be able to provide guidance.
