--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 ---
 layout: default
+scripts:
+ - /assets/js/github.js
 ---
+
+{% for script in page.scripts %}
+<script type="text/javascript" src="{{ script }}"></script>
+{% endfor %}
+
 
 <div>
 <p>I am currently an undergraduate studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I am a recipient of the NUS Merit Scholarship.  I should graduate in November 2021.</p>
@@ -60,7 +67,7 @@ layout: default
 <li>
 <div class="header">Sourceror</div>
 <div class="date">January 2020 &ndash; Present</div>
-<div class="link"><a href="https://source-academy.github.io/playground">Try it here!</a> (select Source &sect;1 WebAssembly from the drop-down menu) | <a href="https://github.com/source-academy/sourceror">GitHub repository</a> | <img class="typeicon" src="font-awesome/web.svg" /> <img class="typeicon" src="font-awesome/node-js.svg" /></div>
+<div class="link"><a href="https://source-academy.github.io/playground">Try it here!</a> (select Source &sect;1 WebAssembly from the drop-down menu) | <a href="https://github.com/source-academy/sourceror">GitHub repository</a> | <img class="typeicon" src="font-awesome/web.svg" /> <img class="typeicon" src="font-awesome/node-js.svg" /> | <span class="github-stars" data-repo="source-academy/sourceror"></span> <img class="smalltypeicon" src="font-awesome/star.svg" /></div>
 <div class="content">Sourceror is an optimising compiler from Source to WebAssembly.  Source is a simplified variant of JavaScript designed for the introductory programming module at NUS.  Sourceror implements many features expected of a fully-featured compiler, including modules (multi-file compilation with import/export), a foreign function interface with JavaScript, a garbage collector, and optimisations for variable capture, type propagation, and function call devirtualisation.  The compiler itself is compiled to WebAssembly so that Source programs can be compiled and run from within the browser.  Sourceror was my project for the CS4215 module at NUS.  Sourceror is now maintained by the Source Academy team at NUS which I am part of, and I continue to review code that goes into the project.</div>
 <div class="content"><span class="semibold">Technologies:</span> Rust, WebAssembly, TypeScript</div>
 </li>
@@ -68,7 +75,7 @@ layout: default
 <li>
 <div class="header">Native File Dialog Extended</div>
 <div class="date">August 2018 &ndash; Present</div>
-<div class="link"><a href="https://github.com/btzy/nativefiledialog-extended">GitHub repository</a> | <img class="typeicon" src="font-awesome/windows.svg" /> <img class="typeicon" src="font-awesome/apple.svg" /> <img class="typeicon" src="font-awesome/linux.svg" /></div>
+<div class="link"><a href="https://github.com/btzy/nativefiledialog-extended">GitHub repository</a> | <img class="typeicon" src="font-awesome/windows.svg" /> <img class="typeicon" src="font-awesome/apple.svg" /> <img class="typeicon" src="font-awesome/linux.svg" /> | <span class="github-stars" data-repo="btzy/nativefiledialog-extended"></span> <img class="smalltypeicon" src="font-awesome/star.svg" /></div>
 <div class="content">Native File Dialog Extended (NFDe) is an abstraction over the platform-specific file and directory pickers on Windows, Mac, and Linux.  It is based on <a href="https://github.com/mlabbe/nativefiledialog">Native File Dialog</a>, and adds additional features such as friendly filter names and a C++ wrapper.  NFDe was originally designed for use with Circuit Sandbox, but I still maintain it and it is now depended on by other third-party projects.</div>
 <div class="content"><span class="semibold">Technologies:</span> C, C++, Objective-C</div>
 </li>
@@ -76,7 +83,7 @@ layout: default
 <li>
 <div class="header">Circuit Sandbox</div>
 <div class="date">May &ndash; August 2018</div>
-<div class="link"><a href="https://github.com/btzy/circuit-sandbox">GitHub repository</a> | <a href="https://btzy.github.io/circuit-sandbox-poster.pdf">Poster</a> | <img class="typeicon" src="font-awesome/windows.svg" /> <img class="typeicon" src="font-awesome/apple.svg" /> <img class="typeicon" src="font-awesome/linux.svg" /></div>
+<div class="link"><a href="https://github.com/btzy/circuit-sandbox">GitHub repository</a> | <a href="https://btzy.github.io/circuit-sandbox-poster.pdf">Poster</a> | <img class="typeicon" src="font-awesome/windows.svg" /> <img class="typeicon" src="font-awesome/apple.svg" /> <img class="typeicon" src="font-awesome/linux.svg" /> | <span class="github-stars" data-repo="btzy/circuit-sandbox"></span> <img class="smalltypeicon" src="font-awesome/star.svg" /></div>
 <div class="content">Circuit Sandbox is a digital sandbox game where users can create arbitrarily complex circuits out of simple components.  To support large and complex simulations efficiently, Circuit Sandbox uses many careful optimisation techniques, such as lock-free multi-threading and C++ template metaprogramming.  Circuit Sandbox is a collaboration with <a href="http://kuanwh.com/">Kuan Wei Heng</a>, for our <span class="italicname">Independent Software Development Project (Orbital)</span> module at NUS.</div>
 <div class="content"><span class="semibold">Technologies:</span> C++17, Boost, SDL2</div>
 </li>
@@ -84,7 +91,7 @@ layout: default
 <li>
 <div class="header">Jelly Compiler for Brainfuck / wasm-codegen</div>
 <div class="date">March 2017</div>
-<div class="link"><a href="https://btzy.github.io/jelly">Try it here!</a> | <a href="https://github.com/btzy/jelly">GitHub repository</a> | <img class="typeicon" src="font-awesome/web.svg" /></div>
+<div class="link"><a href="https://btzy.github.io/jelly">Try it here!</a> | <a href="https://github.com/btzy/jelly">GitHub repository</a> | <img class="typeicon" src="font-awesome/web.svg" /> | <span class="github-stars" data-repo="btzy/jelly"></span> <img class="smalltypeicon" src="font-awesome/star.svg" /></div>
 <div class="content">Jelly is a browser-based compiler for <a href="https://en.wikipedia.org/wiki/Brainfuck">Brainfuck</a>, one of the most well-known esoteric programming languages.  Jelly features an optimising compiler (written in JavaScript) that compiles Brainfuck to WebAssembly, which can then be compiled to native code and executed in the browser.  This allows much faster execution as compared to other browser-based compilers.</div>
 <div class="content"><span class="semibold">Technologies:</span> JavaScript, WebAssembly</div>
 </li>
