--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@ scripts:
 <p><a href="https://www.comp.nus.edu.sg/programmes/ug/honour/merit/">BComp (CS) Focus Area Certificates</a> are awarded to students with outstanding performance in the modules satisfying that focus area.</p>
 
 <ul>
+<li>AY 20/21 Sem 2 Dean's List for NUS Faculty of Science | <a href="https://credentials.nus.edu.sg/489e9f20-223f-40e9-a850-bf156ffb4270">Digital certificate</a></li>
 <li>Certificate of Distinction in the Programming Languages Focus Area of the Bachelor of Computing in Computer Science | <a href="https://credentials.nus.edu.sg/106ae5cf-653b-4a66-abc3-58eab4f406d5">Digital certificate</a></li>
 <li>Certificate of Distinction in the Algorithms &amp; Theory Focus Area of the Bachelor of Computing in Computer Science | <a href="https://credentials.nus.edu.sg/0e7feda8-b6c6-4b7b-ba15-24941d25d74d">Digital certificate</a></li>
 <li>AY 19/20 Sem 1 Dean's List for NUS School of Computing</li>
