--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ scripts:
 <li>
 <div class="header">Code Jam (Handle: btzy)</div>
 <ul>
+<li>338<sup>th</sup> (round 3) in 2021</li>
 <li>163<sup>th</sup> (round 3) in 2020</li>
 <li>51<sup>st</sup> (round 3) in 2019</li>
 <li>295<sup>th</sup> (round 3) in 2018</li>
