--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ scripts:
 <li>High-performance software development</li>
 <li>Lock-free and wait-free parallel programming</li>
 <li>C++ programming language</li>
+<li>Rust programming language</li>
 <li><span class="more">(and there might be more &hellip;)</span></li>
 </ul>
 </div>
@@ -78,6 +79,14 @@ scripts:
 <div class="link"><a href="https://github.com/btzy/nativefiledialog-extended">GitHub repository</a> | <img class="typeicon" src="font-awesome/windows.svg" /> <img class="typeicon" src="font-awesome/apple.svg" /> <img class="typeicon" src="font-awesome/linux.svg" /> | <span class="github-stars" data-repo="btzy/nativefiledialog-extended"></span> <img class="typeicon" src="font-awesome/star-small.svg" /></div>
 <div class="content">Native File Dialog Extended (NFDe) is an abstraction over the platform-specific file and directory pickers on Windows, Mac, and Linux.  It is based on <a href="https://github.com/mlabbe/nativefiledialog">Native File Dialog</a>, and adds additional features such as friendly filter names and a C++ wrapper.  NFDe was originally designed for use with Circuit Sandbox, but I still maintain it and it is now depended on by other third-party projects.</div>
 <div class="content"><span class="semibold">Technologies:</span> C, C++, Objective-C</div>
+</li>
+
+<li>
+<div class="header">Fluminurs</div>
+<div class="date">August 2019 &ndash; Present</div>
+<div class="link"><a href="https://github.com/fluminurs/fluminurs">GitHub repository</a> | <img class="typeicon" src="font-awesome/windows.svg" /> <img class="typeicon" src="font-awesome/apple.svg" /> <img class="typeicon" src="font-awesome/linux.svg" /> | <span class="github-stars" data-repo="fluminurs/fluminurs"></span> <img class="typeicon" src="font-awesome/star-small.svg" /></div>
+<div class="content">Fluminurs is a CLI tool and library to download files, announcements, videos, and other resources from LumiNUS, NUS's online learning management system, using a reverse-engineered API.  I was a casual contributor in 2019 and 2020, but joined the development team in 2021 and took a more active role in developing new features.</div>
+<div class="content"><span class="semibold">Technologies:</span> Rust</div>
 </li>
 
 <li>
