Add arXiv link for XFC4101 paper

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ scripts:
 <li>CS4212 Compiler Design | <a href="nus/CS4212.html">Review</a> | <a href="https://github.com/btzy/CS4212-compiler">Github repository</a></li>
 <li>CS4232 Theory of Computation | <a href="nus/CS4232.html">Review</a> | <a href="nus/CS4232 Reference.pdf">Cheatsheet</a></li>
 <li>MA4270 Data Modelling and Computation | <a href="nus/MA4270.html">Review</a> | <a href="nus/MA4270 Reference.pdf">Cheatsheet</a></li>
-<li>XFC4101 Integrated Honours Thesis (year-long module) | <a href="nus/XFC4101.html">Review</a></li>
+<li>XFC4101 Integrated Honours Thesis (year-long module) | <a href="nus/XFC4101.html">Review</a> | <a href="https://arxiv.org/abs/2106.12193">arXiv</a></li>
 </ul>
 
 <p class="modulegroup">AY 20/21 Sem 2</p>
@@ -400,7 +400,7 @@ scripts:
 <li>MA4261 Coding and Cryptography | <a href="nus/MA4261.html">Review</a> | <a href="nus/MA4261 Reference.pdf">Cheatsheet</a></li>
 <li>PC1144 Introduction to Modern Physics</li>
 <li>ST2132 Mathematical Statistics | <a href="nus/ST2132.html">Review</a> | <a href="nus/ST2132 Reference.pdf">Cheatsheet</a></li>
-<li>XFC4101 Integrated Honours Thesis (year-long module) | <a href="nus/XFC4101.html">Review</a></li>
+<li>XFC4101 Integrated Honours Thesis (year-long module) | <a href="nus/XFC4101.html">Review</a> | <a href="https://arxiv.org/abs/2106.12193">arXiv</a></li>
 </ul>
 
 <span class="keyname">About DMC1401CS Design Your Own Module (DYOM):</span>  Students may propose their own module (called a DYOM), which counts as a 4MC CS/CU unrestricted elective.  There is generally no restriction on the kind of topic allowed, as long as they can find a supervisor (an NUS professor) and a sufficient number of interested students.  At the point of writing, a minimum of ten students is required (though this may be negotiable), and each student may take up to two DYOMs in total.  For information about starting and running a DYOM in general, see <a href="https://www.nus.edu.sg/registrar/academic-information-policies/undergraduate-students/design-your-own-module">this page</a>.  For SoC-specific guidance, see <a href="https://github.com/nusdistsys/NUS_DYOM">this page</a> (maintained by students).  Some people in <a href="https://www.nushackers.org/">NUS Hackers</a> might also be able to provide guidance.
