Add CS2106 teaching for AY 21/22 Sem 1

--- a/index.html
+++ b/index.html
@@ -234,6 +234,12 @@ scripts:
 <ul class="detailedlist">
 
 <li>
+<div class="header">CS2106 Introduction to Operating Systems</div>
+<div class="date">AY 21/22 Sem 1 (August &ndash; November 2021)</div>
+<div class="content">This is the current semester.</div>
+</li>
+
+<li>
 <div class="header">CS3230 Design and Analysis of Algorithms</div>
 <div class="date">AY 20/21 Sem 2 (January &ndash; April 2021)</div>
 <div class="link"><a href="teaching/teacher_report_2021_sem2_CS3230_tutorial.pdf">Teacher Report</a> (overall score: 3.9/5)</div>
