--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ scripts:
 <li>
 <div class="header">International Collegiate Programming Contest (ICPC)</div>
 <ul>
-<li>??? at ACM-ICPC World Finals 2020 (postponed to 2021)</li>
+<li>22<sup>nd</sup> at ACM-ICPC World Finals Invitational 2020</li>
 <li>1<sup>st</sup> at ACM-ICPC Asia Kuala Lumpur On-Site Regional Contest 2019</li>
 <li>4<sup>th</sup> at ACM-ICPC Asia Bangkok On-Site Regional Contest 2019</li>
 <li>62<sup>nd</sup> at ACM-ICPC World Finals 2019</li>
@@ -197,8 +197,9 @@ scripts:
 <li>
 <div class="header">Simon Marais Mathematics Competition (SMMC)</div>
 <ul>
-<li><a href="https://www.simonmarais.org/20202.html">Top Decile in 2020</a> (scored 32 out of 56 points)</li>
-<li><a href="https://www.simonmarais.org/20192.html">Top Quartile in 2019</a> (scored 34 out of 56 points)</li>
+<li><a href="http://www.simonmarais.org/east-division.html">Top Quartile in 2021</a> (East Division, scored 28 out of 61 points)</li>
+<li><a href="https://www.simonmarais.org/2020.html">Top Decile in 2020</a> (scored 32 out of 56 points)</li>
+<li><a href="https://www.simonmarais.org/2019.html">Top Quartile in 2019</a> (scored 34 out of 56 points)</li>
 <li><a href="https://www.simonmarais.org/20183.html">Top Quartile in 2018</a> (scored 31 out of 56 points)</li>
 </ul>
 </li>
@@ -409,7 +410,16 @@ scripts:
 <li>XFC4101 Integrated Honours Thesis (year-long module) | <a href="nus/XFC4101.html">Review</a> | <a href="https://arxiv.org/abs/2106.12193">arXiv</a></li>
 </ul>
 
-<span class="keyname">About DMC1401CS Design Your Own Module (DYOM):</span>  Students may propose their own module (called a DYOM), which counts as a 4MC CS/CU unrestricted elective.  There is generally no restriction on the kind of topic allowed, as long as they can find a supervisor (an NUS professor) and a sufficient number of interested students.  At the point of writing, a minimum of ten students is required (though this may be negotiable), and each student may take up to two DYOMs in total.  For information about starting and running a DYOM in general, see <a href="https://www.nus.edu.sg/registrar/academic-information-policies/undergraduate-students/design-your-own-module">this page</a>.  For SoC-specific guidance, see <a href="https://github.com/nusdistsys/NUS_DYOM">this page</a> (maintained by students).  Some people in <a href="https://www.nushackers.org/">NUS Hackers</a> might also be able to provide guidance.
+<p class="modulegroup">AY 21/22 Sem 1</p>
+<ul>
+<li>CS5234 Algorithms at Scale</li>
+<li>GEH1030 Science of Music</li>
+<li>MA3205 Set Theory</li>
+<li>MA3238 Stochastic Processes I</li>
+<li>MA4235 Topics in Graph Theory</li>
+</ul>
+
+<p><span class="keyname">About DMC1401CS Design Your Own Module (DYOM):</span>  Students may propose their own module (called a DYOM), which counts as a 4MC CS/CU unrestricted elective.  There is generally no restriction on the kind of topic allowed, as long as they can find a supervisor (an NUS professor) and a sufficient number of interested students.  At the point of writing, a minimum of ten students is required (though this may be negotiable), and each student may take up to two DYOMs in total.  For information about starting and running a DYOM in general, see <a href="https://www.nus.edu.sg/registrar/academic-information-policies/undergraduate-students/design-your-own-module">this page</a>.  For SoC-specific guidance, see <a href="https://github.com/nusdistsys/NUS_DYOM">this page</a> (maintained by students).  Some people in <a href="https://www.nushackers.org/">NUS Hackers</a> might also be able to provide guidance.</p>
 
 </div>
 <hr/>
