Add AY 21/22 Sem 1 FoS Dean's List

--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@ scripts:
 <p><a href="https://www.comp.nus.edu.sg/programmes/ug/honour/merit/">BComp (CS) Focus Area Certificates</a> are awarded to students with outstanding performance in the modules satisfying that focus area.</p>
 
 <ul>
+<li>AY 21/22 Sem 1 Dean's List for NUS Faculty of Science | <a href="https://credentials.nus.edu.sg/d5319e11-8040-4893-bd63-29b82428c2fa">Digital certificate</a></li>
 <li>AY 20/21 Sem 2 Dean's List for NUS School of Computing | <a href="https://credentials.nus.edu.sg/8cc4344a-3a95-4ccb-a24f-904986f62486">Digital certificate</a></li>
 <li>AY 20/21 Sem 2 Dean's List for NUS Faculty of Science | <a href="https://credentials.nus.edu.sg/489e9f20-223f-40e9-a850-bf156ffb4270">Digital certificate</a></li>
 <li>Certificate of Distinction in the Programming Languages Focus Area of the Bachelor of Computing in Computer Science | <a href="https://credentials.nus.edu.sg/106ae5cf-653b-4a66-abc3-58eab4f406d5">Digital certificate</a></li>
